--- a/README.org
+++ b/README.org
@@ -95,13 +95,14 @@ git@github.com:emacs-china/hello-emacs.git
 
 * 其他
 
-| 名称                                  | 作(译)者                    | 地址                                                                | 程序语言      |
-|-----------------------------------------+--------------------------------+-----------------------------------------------------------------------+-------------------|
-| [[https://github.com/forhappy/A-Detailed-Cplusplus-Concurrency-Tutorial/blob/master/Table-of-contents.md][C++ 并发编程指南]]                  | [[https://github.com/forhappy][forhappy]]                       | https://github.com/forhappy/A-Detailed-Cplusplus-Concurrency-Tutorial | C++               |
-| [[ http://natureofcode.com/][The Nature of Code]]                      | shiffman                       | https://github.com/shiffman/The-Nature-of-Code                        |                   |
-| [[https://github.com/royguo/ml_hackers/blob/master/list.md][Machine Learning For Hackers中文版]]   | royguo                         | https://github.com/royguo/ml_hackers                                  |                   |
-| [[http://softwaredownload.gitbooks.io/openwrt-fanqiang/][OpenWrt教程]]                           |                                | https://github.com/softwaredownload/openwrt-fanqiang                  |                   |
-
+| 名称                               | 作(译)者 | 地址                                                                  | 程序语言 |
+|------------------------------------+----------+-----------------------------------------------------------------------+----------|
+| [[https://github.com/forhappy/A-Detailed-Cplusplus-Concurrency-Tutorial/blob/master/Table-of-contents.md][C++ 并发编程指南]]                   | [[https://github.com/forhappy][forhappy]] | https://github.com/forhappy/A-Detailed-Cplusplus-Concurrency-Tutorial | C++      |
+| [[ http://natureofcode.com/][The Nature of Code]]                 | shiffman | https://github.com/shiffman/The-Nature-of-Code                        |          |
+| [[https://github.com/royguo/ml_hackers/blob/master/list.md][Machine Learning For Hackers中文版]] | royguo   | https://github.com/royguo/ml_hackers                                  |          |
+| [[http://softwaredownload.gitbooks.io/openwrt-fanqiang/][OpenWrt教程]]                        |          | https://github.com/softwaredownload/openwrt-fanqiang                  |          |
+| [[amoblin.gitbooks.io/marboo-guide/content/zh-cn/index.html][Marboo用户指南]]                     | amoblin  | https://github.com/marboo/marboo-doc                                  |          | 
+  
 * 在线阅读平台
 - [[https://www.gitbook.com/][GitBook]]
 - [[https://leanpub.com/][leanpub]]
@@ -109,7 +110,9 @@ git@github.com:emacs-china/hello-emacs.git
 * 离线阅读
 
 把地址clone到Marboo目录下，即可在Marboo中离线阅读 :)
+
 Marboo Pro(付费版) Mac App Store下载地址：<https://itunes.apple.com/cn/app/marboo-pro/id1010557319?mt=12>
+
 Marboo Mac App Store 下载地址：<https://itunes.apple.com/cn/app/marboo/id880375426?mt=12>
 
 #+BEGIN_SRC sh
@@ -123,6 +126,7 @@ git clone https://github.com/astaxie/build-web-application-with-golang ~/Marboo/
 [[./images/marboo-sphinx.png]]
 [[./images/marboo-docker.png]]
 [[./images/marboo-coffeescript.png]]
+[[./images/marboo-guide.png]]
 
 * References
 - [[https://github.com/nemoTyrant/free-programming-books/blob/master/free-programming-books-zh.md][Free Programming Books]]
